Bug fixes and minor updates
Fixed 404 Error
Added Favicon
Added Discord Embed Compatibility

--- a/products/himalayan-lotus.html
+++ b/products/himalayan-lotus.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Product 1 Title">
     <meta name="description" content="">
+    <link rel="icon" type="image/png" href="images/002.png">
     <title>Product Details Template</title>
     <link rel="stylesheet" href="../nicepage.css" media="screen">
 <link rel="stylesheet" href="../Product-Details-Template.css" media="screen">
