--- a/Home.html
+++ b/Home.html
@@ -2,6 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="images/002.png">
     <meta name="keywords" content="Welcome to Aurora Studios, Quality Cover Services, Our Services">
     <meta name="description" content="">
     <title>Home</title>
