--- a/products/products.html
+++ b/products/products.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="">
+    <link rel="icon" type="image/png" href="images/002.png">
     <meta name="description" content="">
     <title>Shop</title>
     <link rel="stylesheet" href="../nicepage.css" media="screen">
