--- a/products/avatar-lives--the-sole-ascendent.html
+++ b/products/avatar-lives--the-sole-ascendent.html
@@ -29,7 +29,7 @@
         <a href="../Home.html" data-page-id="92706004" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500" title="Home">
           <img class="u-logo-image u-logo-image-1" src="../images/002.png">
         </a>
-        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="SM" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
+        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1 u-nav" data-responsive-from="SM" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -345,4 +345,5 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     right: 20px;
   }
 }</style>
+<script src="underline.js"></script>
 </body></html>
