Slider Error somewhat fixed

--- a/products/products.html
+++ b/products/products.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="">
-    <link rel="icon" type="image/png" href="images/002.png">
+    <link rel="icon" type="image/png" href="/AuroraStudios/images/002.png">
     <meta name="description" content="">
     <title>Shop</title>
     <link rel="stylesheet" href="../nicepage.css" media="screen">
@@ -237,7 +237,19 @@
         </div>
         <button class="u-dialog-close-button u-icon u-text-grey-40 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-efe9"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-efe9"><rect x="7" y="0" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -3.3138 8.0002)" width="2" height="16"></rect><rect x="0" y="7" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -3.3138 8.0002)" width="16" height="2"></rect></svg></button>
       </div>
-    </section><style>.u-dialog-section-4 .u-dialog-1 {
+    </section>
+    <style>
+    .u-menu.u-menu-one-level.u-offcanvas.u-menu-1.u-nav.animated.fadeIn-played.u-enable-responsive {
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        width: 100% !important;
+        margin: 0 auto !important;
+    }
+
+    
+
+    .u-dialog-section-4 .u-dialog-1 {
   width: 570px;
   min-height: 578px;
   height: auto;
@@ -375,5 +387,6 @@
     right: 20px;
   }
 }</style>
-<script src="underline.js"></script>
+
+<script src="../underline.js"></script>
 </body></html>
