--- a/products/avatar-lives--the-sole-ascendent.html
+++ b/products/avatar-lives--the-sole-ascendent.html
@@ -345,5 +345,5 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     right: 20px;
   }
 }</style>
-<script src="underline.js"></script>
+<script src="../underline.js"></script>
 </body></html>
