SLIDER ERROR FIXED :D

--- a/products/products.html
+++ b/products/products.html
@@ -247,7 +247,14 @@
         margin: 0 auto !important;
     }
 
-    
+    .u-nav {
+
+    justify-content: center !important;
+
+    width: 100% !important;
+
+}
+
 
     .u-dialog-section-4 .u-dialog-1 {
   width: 570px;
