--- a/products/hellborn--rise-of-the-demon-sovereign.html
+++ b/products/hellborn--rise-of-the-demon-sovereign.html
@@ -199,6 +199,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   padding: 34px 35px;
 }
 
+.u-nav {
+
+justify-content: center !important;
+
+width: 100% !important;
+
+}
+
 .u-dialog-section-4 .u-text-1 {
   font-weight: 700;
   margin: 0 165px 0 0;
