--- a/products/himalayan-lotus.html
+++ b/products/himalayan-lotus.html
@@ -205,6 +205,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   margin: 60px auto;
 }
 
+.u-nav {
+
+justify-content: center !important;
+
+width: 100% !important;
+
+}
+
 .u-dialog-section-4 .u-container-layout-1 {
   padding: 34px 35px;
 }
