--- a/products/the-heir-to-nothing.html
+++ b/products/the-heir-to-nothing.html
@@ -204,6 +204,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   margin: 0 165px 0 0;
 }
 
+.u-nav {
+
+justify-content: center !important;
+
+width: 100% !important;
+
+}
+
 .u-dialog-section-4 .u-products-1 {
   margin-top: 30px;
   margin-bottom: 0;
