--- a/products/when-luna-rules-the-world.html
+++ b/products/when-luna-rules-the-world.html
@@ -234,6 +234,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   margin: 30px auto 0 0;
 }
 
+.u-nav {
+
+justify-content: center !important;
+
+width: 100% !important;
+
+}
+
 .u-dialog-section-4 .u-product-price-1 {
   margin: -34px 0 0 auto;
 }
