--- a/Auroralis.html
+++ b/Auroralis.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Contact</title>
+    <title>Auroralis</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Contact.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -21,7 +21,7 @@
 		"logo": "images/002.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Contact">
+    <meta property="og:title" content="Auroralis">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
@@ -39,7 +39,7 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-spacing-30 u-unstyled u-nav-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Home.html" style="padding: 6px 0px;">Home</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="About.html" style="padding: 6px 0px;">About</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Contact.html" style="padding: 6px 0px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Auroralis.html" style="padding: 6px 0px;">Auroralis</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="products/products.html" style="padding: 6px 0px;">Top Covers</a>
 </li></ul>
           </div>
@@ -49,7 +49,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2" style="display: flex; flex-direction: column;"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Auroralis.html">Auroralis</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="products/products.html">Top Covers</a>
 </li></ul>
               </div>
@@ -62,9 +62,9 @@
         </a>
       </div></header>
     <section class="u-clearfix u-section-1" id="block-1">
-      <div class="u-clearfix u-sheet u-sheet-1"></div>
+      <div class="u-clearfix u-sheet u-sheet-1"><h3 class="u-text u-text-default">Auroralis is Still in development...</h3></div>
     </section>
-
+        
 
 
 
@@ -76,5 +76,7 @@
         </a>
       </p>
     </section>
+    
 <script src="underline.js"></script>
+
 </body></html>
