--- a/Home.html
+++ b/Home.html
@@ -46,7 +46,7 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-spacing-30 u-unstyled u-nav-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Home.html" style="padding: 6px 0px;">Home</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="About.html" style="padding: 6px 0px;">About</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Contact.html" style="padding: 6px 0px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Auroralis.html" style="padding: 6px 0px;">Auroralis</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="products/products.html" style="padding: 6px 0px;">Top Covers</a>
 </li></ul>
           </div>
@@ -56,7 +56,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2" style="display: flex; flex-direction: column;"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Auroralis.html">Auroralis</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="products/products.html">Top Covers</a>
 </li></ul>
               </div>
@@ -189,25 +189,25 @@
           <div class="u-repeater u-repeater-1">
             <!--product_item--><div class="u-align-center u-container-align-center u-container-style u-products-item u-repeater-item u-shape-rectangle" data-product-id="6">
               <div class="u-container-layout u-similar-container u-container-layout-1"><!--product_image-->
-                <a class="u-product-title-link" href="products/himalayan-lotus.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-1" src="images/lotushimalayan.jpg"></a><img src="images/HimalayanLotus.jpg" class="u-product-second-image"><!--/product_image--><!--product_title-->
+                <a class="u-product-title-link-1" href="products/himalayan-lotus.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-1" src="images/lotushimalayan.jpg"></a><img src="images/HimalayanLotus.jpg" class="u-product-second-image"><!--/product_image--><!--product_title-->
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-product-control u-text u-text-custom-color-3 u-text-3">
-                  <a class="u-product-title-link" href="products/himalayan-lotus.html">Himalayan Lotus</a>
+                  <a class="u-product-title-link-1" href="products/himalayan-lotus.html">Himalayan Lotus</a>
                 </h4><!--/product_title--><!--product_content-->
                 <div class="u-product-control u-product-desc u-text u-text-4">By AtlanticCurtain</div><!--/product_content-->
               </div>
             </div><!--/product_item--><!--product_item--><div class="u-align-center u-container-align-center u-container-style u-products-item u-repeater-item u-shape-rectangle" data-product-id="3">
               <div class="u-container-layout u-similar-container u-container-layout-2"><!--product_image-->
-                <a class="u-product-title-link" href="products/hellborn--rise-of-the-demon-sovereign.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-2" src="images/Hellborn.png"></a><!--/product_image--><!--product_title-->
+                <a class="u-product-title-link-1" href="products/hellborn--rise-of-the-demon-sovereign.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-2" src="images/Hellborn.png"></a><!--/product_image--><!--product_title-->
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-product-control u-text u-text-custom-color-3 u-text-5">
-                  <a class="u-product-title-link" href="products/hellborn--rise-of-the-demon-sovereign.html">Hellborn: Rise of the Demon Sovereign</a>
+                  <a class="u-product-title-link-1" href="products/hellborn--rise-of-the-demon-sovereign.html">Hellborn: Rise of the Demon Sovereign</a>
                 </h4><!--/product_title--><!--product_content-->
                 <div class="u-product-control u-product-desc u-text u-text-6">By BlackCovra</div><!--/product_content-->
               </div>
             </div><!--/product_item--><!--product_item--><div class="u-align-center u-container-align-center u-container-style u-products-item u-repeater-item u-shape-rectangle" data-product-id="5">
               <div class="u-container-layout u-similar-container u-container-layout-3"><!--product_image-->
-                <a class="u-product-title-link" href="products/the-heir-to-nothing.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-3" src="images/74e999a5be7b5e74.jpg"></a><!--/product_image--><!--product_title-->
+                <a class="u-product-title-link-1" href="products/the-heir-to-nothing.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-3" src="images/74e999a5be7b5e74.jpg"></a><!--/product_image--><!--product_title-->
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-product-control u-text u-text-custom-color-3 u-text-7">
-                  <a class="u-product-title-link" href="products/the-heir-to-nothing.html">The Heir to Nothing</a>
+                  <a class="u-product-title-link-1" href="products/the-heir-to-nothing.html">The Heir to Nothing</a>
                 </h4><!--/product_title--><!--product_content-->
                 <div class="u-product-control u-product-desc u-text u-text-8">By Zaido_Kun</div><!--/product_content-->
               </div>
@@ -225,8 +225,12 @@
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="800" data-animation-delay="75">Like What You See?</h2>
           <p class="u-align-center u-text u-text-2" spellcheck="false"> Love the covers above? Join Aurora Studios and get your own high-quality cover or browse more designs to see what we offer!</p>
-          <a href="https://discord.gg/guU5QJYpn6" class="u-active-black u-align-center u-border-2 u-border-active-black u-border-hover-black u-border-palette-1-base u-btn u-btn-round u-button-style u-custom-color-3 u-hover-black u-radius u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">Join Aurora Studios</a>
-          <a href="products/products.html" data-page-id="12710668" class="u-active-black u-align-center u-border-2 u-border-active-black u-border-hover-black u-border-palette-1-base u-btn u-btn-round u-button-style u-custom-color-3 u-hover-black u-radius u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-2" title="Store">See More</a>
+          <a href="https://discord.gg/guU5QJYpn6" class="two-damn-buttons join-aurora-btn u-active-black u-align-center u-border-2 u-border-active-black u-border-hover-black u-border-palette-1-base u-btn u-btn-round u-button-style u-custom-color-3 u-hover-black u-radius u-text-active-white u-text-body-alt-color u-text-hover-white">
+            Join Aurora Studios
+          </a>
+          <a href="products/products.html" data-page-id="12710668" class="two-damn-buttons see-more-btn u-active-black u-align-center u-border-2 u-border-active-black u-border-hover-black u-border-palette-1-base u-btn u-btn-round u-button-style u-custom-color-3 u-hover-black u-radius u-text-active-white u-text-body-alt-color u-text-hover-white" title="Store">
+            See More
+          </a>
         </div>
       </div>
     </section>
