--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-spacing-30 u-unstyled u-nav-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Home.html" style="padding: 6px 0px;">Home</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="About.html" style="padding: 6px 0px;">About</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Contact.html" style="padding: 6px 0px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="Auroralis.html" style="padding: 6px 0px;">Auroralis</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-3 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-custom-color-3 u-text-custom-color-1 u-text-hover-custom-color-3" href="products/products.html" style="padding: 6px 0px;">Top Covers</a>
 </li></ul>
           </div>
@@ -49,7 +49,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2" style="display: flex; flex-direction: column;"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Auroralis.html">Auroralis</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="products/products.html">Top Covers</a>
 </li></ul>
               </div>
