--- a/About.html
+++ b/About.html
@@ -71,8 +71,8 @@
     <section class="u-backlink u-clearfix u-grey-80">
       <p class="u-text">
         <span>This site was created by </span>
-        <a class="u-link" href="https://discord.gg/guU5QJYpn6" target="_blank" rel="nofollow">
-          <span>Opme6_</span>
+        <a class="u-link" href="https://discord.gg/nEy9vtTY9G" target="_blank" rel="nofollow">
+          <span>Aurora Studios - Development Department</span>
         </a>
       </p>
     </section>
