--- a/Home.html
+++ b/Home.html
@@ -30,8 +30,19 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
+  <meta data-intl-tel-input-cdn-path="intlTelInput/">
+</head>
+  <body data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en">
+    <div class="auroralis-loader">
+      <div class="auroralis-logo-wrapper">
+        <svg class="auroralis-logo" viewBox="0 0 200 50">
+          <text x="0" y="35" class="auroralis-text">Auroralis</text>
+        </svg>
+      </div>
+      <p class="auroralis-loading-text">is preparing website for you....</p>
+      <div class="auroralis-progress-bar"></div>
+    </div>
+    <header class="u-black u-clearfix u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home.html" data-page-id="92706004" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500" title="Home">
           <img class="u-logo-image u-logo-image-1" src="images/002.png">
         </a>
@@ -189,25 +200,25 @@
           <div class="u-repeater u-repeater-1">
             <!--product_item--><div class="u-align-center u-container-align-center u-container-style u-products-item u-repeater-item u-shape-rectangle" data-product-id="6">
               <div class="u-container-layout u-similar-container u-container-layout-1"><!--product_image-->
-                <a class="u-product-title-link-1" href="products/himalayan-lotus.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-1" src="images/lotushimalayan.jpg"></a><img src="images/HimalayanLotus.jpg" class="u-product-second-image"><!--/product_image--><!--product_title-->
+                <a class="u-product-title-link-1" href="products/himalayan-lotus.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-1" src="images/lotushimalayan.jpg"></a><img src="images/HimalayanLotus.jpg" class="step u-product-second-image"><!--/product_image--><!--product_title-->
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-product-control u-text u-text-custom-color-3 u-text-3">
-                  <a class="u-product-title-link-1" href="products/himalayan-lotus.html">Himalayan Lotus</a>
+                  <a class="u-product-title-link-1" href="products/products.html">Himalayan Lotus</a>
                 </h4><!--/product_title--><!--product_content-->
                 <div class="u-product-control u-product-desc u-text u-text-4">By AtlanticCurtain</div><!--/product_content-->
               </div>
             </div><!--/product_item--><!--product_item--><div class="u-align-center u-container-align-center u-container-style u-products-item u-repeater-item u-shape-rectangle" data-product-id="3">
               <div class="u-container-layout u-similar-container u-container-layout-2"><!--product_image-->
-                <a class="u-product-title-link-1" href="products/hellborn--rise-of-the-demon-sovereign.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-2" src="images/Hellborn.png"></a><!--/product_image--><!--product_title-->
+                <a class="u-product-title-link-1" href="products/hellborn--rise-of-the-demon-sovereign.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control step u-image-2" src="images/Hellborn.png"></a><!--/product_image--><!--product_title-->
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-product-control u-text u-text-custom-color-3 u-text-5">
-                  <a class="u-product-title-link-1" href="products/hellborn--rise-of-the-demon-sovereign.html">Hellborn: Rise of the Demon Sovereign</a>
+                  <a class="u-product-title-link-1" href="products/products.html">Hellborn: Rise of the Demon Sovereign</a>
                 </h4><!--/product_title--><!--product_content-->
                 <div class="u-product-control u-product-desc u-text u-text-6">By BlackCovra</div><!--/product_content-->
               </div>
             </div><!--/product_item--><!--product_item--><div class="u-align-center u-container-align-center u-container-style u-products-item u-repeater-item u-shape-rectangle" data-product-id="5">
               <div class="u-container-layout u-similar-container u-container-layout-3"><!--product_image-->
-                <a class="u-product-title-link-1" href="products/the-heir-to-nothing.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control u-image-3" src="images/74e999a5be7b5e74.jpg"></a><!--/product_image--><!--product_title-->
+                <a class="u-product-title-link-1" href="products/the-heir-to-nothing.html"><img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-product-control step u-image-3" src="images/74e999a5be7b5e74.jpg"></a><!--/product_image--><!--product_title-->
                 <h4 class="u-align-center u-custom-font u-font-montserrat u-product-control u-text u-text-custom-color-3 u-text-7">
-                  <a class="u-product-title-link-1" href="products/the-heir-to-nothing.html">The Heir to Nothing</a>
+                  <a class="u-product-title-link-1" href="products/products.html">The Heir to Nothing</a>
                 </h4><!--/product_title--><!--product_content-->
                 <div class="u-product-control u-product-desc u-text u-text-8">By Zaido_Kun</div><!--/product_content-->
               </div>
@@ -241,76 +252,12 @@
     <section class="u-backlink u-clearfix u-grey-80">
       <p class="u-text">
         <span>This site was created by </span>
-        <a class="u-link" href="https://discord.gg/guU5QJYpn6" target="_blank" rel="nofollow">
-          <span>Opme6_</span>
+        <a class="u-link" href="https://discord.gg/nEy9vtTY9G" target="_blank" rel="nofollow">
+          <span>Aurora Studios - Development Department</span>
         </a>
       </p>
     </section>
-  <section class="u-black u-clearfix u-container-style u-dialog-block u-opacity u-opacity-70 u-payment-dialog u-valign-middle u-dialog-section-9" id="popup-fb6a">
-      <div class="u-align-center u-container-style u-dialog u-radius-25 u-shape-round u-white u-dialog-1">
-        <div class="u-container-layout u-valign-top u-container-layout-1">
-          <h5 class="u-align-left u-text u-text-1">Buy Now</h5>
-          <div class="u-expanded-width u-products u-products-1" data-site-sorting-prop="created" data-site-sorting-order="desc" data-items-per-page="1">
-            <div class="u-list-control"></div>
-            <div class="u-repeater u-repeater-1">
-              <!--product_item--><div class="u-container-style u-products-item u-repeater-item">
-                <div class="u-container-layout u-similar-container u-container-layout-2">
-                  <h5 class="u-align-left u-product-control u-text u-text-2">
-                    <a class="u-product-title-link" href="#">Product 1 Title</a>
-                  </h5>
-                  <div class="u-align-left u-product-control u-product-desc u-text u-text-3">
-                    <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
-                  </div>
-                  <div class="u-align-left u-product-control u-product-quantity u-product-quantity-1">
-                    <div class="u-hidden u-quantity-label">Quantity</div>
-                    <div class="u-border-1 u-border-grey-30 u-quantity-input u-radius-50">
-                      <a class="disabled minus u-button-style u-quantity-button u-text-body-color">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m 4 8 h 8" fill="none" stroke="currentColor" stroke-width="1" fill-rule="evenodd"></path></svg>
-                      </a>
-                      <input class="u-input" type="text" value="1" pattern="[0-9]+">
-                      <a class="plus u-button-style u-quantity-button u-text-body-color">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m 4 8 h 8 M 8 4 v 8" fill="none" stroke="currentColor" stroke-width="1" fill-rule="evenodd"></path></svg>
-                      </a>
-                    </div>
-                  </div>
-                  <div data-add-zero-cents="false" class="u-align-left u-product-control u-product-price u-product-price-1">
-                    <div class="u-price-wrapper u-spacing-10">
-                      <div class="u-old-price" style="text-decoration: line-through !important;">$20.00</div>
-                      <div class="u-price" style="font-size: 1.25rem; font-weight: 700;">$17.00</div>
-                    </div>
-                  </div>
-                </div>
-              </div><!--/product_item-->
-            </div>
-            <div class="u-list-control"></div>
-          </div>
-          <div class="u-expanded-width u-payment-services u-tab-links-align-justify u-tab-payment u-tab-vertical u-tabs u-payment-services-1" data-payment-order-approved-message="Your order has been approved. Thank you!" data-payment-order-cancelled-message="Unable to process your order. Please try again later.">
-            <ul class="u-tab-list u-unstyled" role="tablist"><li class="u-tab-item" role="presentation"><a class="active u-active-grey-10 u-button-style u-payment-paypal u-tab-link u-text-body-color" id="link-tab-9cb3" href="#tab-9cb3" role="tab" aria-controls="tab-9cb3" aria-selected="true"><input type="radio" class="u-field-input u-grey-15 u-radius-15" name="payment-group" checked="checked"><span>Paypal</span><svg class="u-svg-content" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"><path fill="#009EE3" d="M11,5.9H18c3.8,0,5.2,1.9,4.9,4.7c-0.3,4.7-3.2,7.2-6.9,7.2h-1.9c-0.5,0-0.8,0.3-0.9,1.3l-0.8,4.3
-  c-0.1,0.3-0.2,0.5-0.5,0.6H7.6c-0.4,0-0.5-0.3-0.4-1l2.6-16C9.9,6.3,10.2,5.9,11,5.9z"></path><path fill="#113984" d="M6.7,0h7.1c2,0,4.3,0.1,5.9,1.5c1.1,0.9,1.6,2.4,1.5,4c-0.4,5.4-3.7,8.5-8,8.5H9.6c-0.6,0-0.9,0.4-1.2,1.5
-  l-0.9,5.1C7.4,21,7.3,21.3,7,21.3H2.6C2,21.3,1.9,21,2,20.1L5.2,1.3C5.3,0.4,5.7,0,6.7,0z"></path><path fill="#172C70" d="M8.6,14.8l1.3-7.9c0.1-0.7,0.5-1,1.3-1h7.1c1.2,0,2.1,0.2,2.8,0.5c-0.7,4.8-3.8,7.5-7.9,7.5H9.6
-  C9.1,13.9,8.8,14.1,8.6,14.8z"></path></svg>
-</a>
-</li><li class="u-tab-item" role="presentation"><a class="u-active-grey-10 u-button-style u-payment-stripe u-tab-link u-text-body-color" id="link-tab-ab80" href="#tab-ab80" role="tab" aria-controls="tab-ab80" aria-selected="false"><input type="radio" class="u-field-input u-grey-15 u-radius-15" name="payment-group"><span>Stripe</span><svg class="u-svg-content" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 24 24"><path fill="#635BFF" d="M14,9.2c-2.3-0.8-3.4-1.5-3.4-2.4c0-0.8,0.8-1.3,2-1.3c2.3,0,4.7,0.8,6.4,1.6l0.9-5.5
-  c-1.3-0.5-4-1.6-7.7-1.6C9.6,0,7.5,0.7,5.8,1.9C4.1,3.2,3.4,4.9,3.4,7.2c0,4,2.6,5.7,6.8,7.2c2.7,0.9,3.6,1.6,3.6,2.5
-  c0,0.9-0.9,1.6-2.4,1.6c-1.9,0-5.2-0.9-7.3-2.1L3,22c1.8,0.9,5.1,2,8.7,2c2.8,0,5.1-0.7,6.6-1.9c1.8-1.3,2.7-3.2,2.7-5.7
-  C20.9,12.3,18.2,10.7,14,9.2L14,9.2z"></path></svg>
-</a>
-</li></ul>
-            <div class="u-tab-content">
-              <div class="u-container-style u-payment-paypal u-tab-active u-tab-pane" id="tab-9cb3" role="tabpanel" aria-labelledby="link-tab-9cb3">
-                <div class="u-container-layout u-payment-services-inner u-container-layout-3">Loading...</div>
-              </div>
-              <div class="u-container-style u-payment-stripe u-tab-pane" id="tab-ab80" role="tabpanel" aria-labelledby="link-tab-ab80">
-                <div class="u-container-layout u-container-layout-4">
-                  <a href="#" class="u-btn u-button-style u-stripe-button u-btn-1">Pay with Stripe</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <button class="u-dialog-close-button u-icon u-text-grey-40 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-efe9"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-efe9"><rect x="7" y="0" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -3.3138 8.0002)" width="2" height="16"></rect><rect x="0" y="7" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -3.3138 8.0002)" width="16" height="2"></rect></svg></button>
-      </div>
-    </section><style>.u-dialog-section-9 .u-dialog-1 {
+  <style>.u-dialog-section-9 .u-dialog-1 {
   width: 570px;
   min-height: 578px;
   height: auto;
@@ -367,6 +314,80 @@
   margin: 0;
 }
 
+/* Auroralis Loader */
+.auroralis-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0a0a15; /* Dark cosmic background */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  opacity: 1;
+  transition: opacity 0.8s ease-out;
+}
+
+.auroralis-loader.fade-out {
+  opacity: 0;
+}
+
+.auroralis-logo-wrapper {
+  margin-bottom: 20px;
+}
+
+.auroralis-logo {
+  width: 250px;
+  height: 60px;
+}
+
+.auroralis-text {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1.5;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: draw-logo 2.5s ease-out forwards;
+}
+
+@keyframes draw-logo {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+.auroralis-loading-text {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  opacity: 0;
+  animation: fade-in 1s 1.5s forwards;
+}
+
+.auroralis-progress-bar {
+  width: 0;
+  height: 2px;
+  background: linear-gradient(90deg, #6e44ff, #ff44ec);
+  margin-top: 30px;
+  animation: progress 2s 0.5s ease-out forwards;
+}
+
+@keyframes fade-in {
+  to { opacity: 1; }
+}
+
+@keyframes progress {
+  to { width: 200px; }
+}
 .u-dialog-section-9 .u-container-layout-3 {
   padding: 20px 0 0;
 }
@@ -449,4 +470,7 @@
   }
 }</style>
 <script src="underline.js"></script>
+<script src="script1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
 </body></html>
