--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -49,7 +49,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Auroralis.html">Auroralis</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="products/products.html">Top Covers</a>
 </li></ul>
               </div>
@@ -64,7 +64,7 @@
     <section class="u-align-center u-clearfix u-container-align-center u-section-1" id="block-1">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-align-center u-text u-text-default u-text-1"> Thank you for your order</h2>
-        <p class="u-align-center u-text u-text-default u-text-2">Sample text. Click to select the Text Element.</p>
+
       </div>
     </section>
 
@@ -74,8 +74,8 @@
     <section class="u-backlink u-clearfix u-grey-80">
       <p class="u-text">
         <span>This site was created by </span>
-        <a class="u-link" href="https://discord.gg/guU5QJYpn6" target="_blank" rel="nofollow">
-          <span>Opme6_</span>
+        <a class="u-link" href="https://discord.gg/nEy9vtTY9G" target="_blank" rel="nofollow">
+          <span>Aurora Studios - Development Department</span>
         </a>
       </p>
     </section>
